# pfm

./: .gitignore  Cargo.toml  Makefile  README.md  backup-historical.sh  deploy.sh  dev.env  push-pfm-data.sh  rust-toolchain.toml  setup-pfm.sh  update-config.sh
.github/workflows/: check.yml  deploy.yml  test.yml
pfm-core/: Cargo.toml
pfm-core/src/: error.rs  forex.rs  forex_manager.rs  forex_mock.rs  forex_test.rs  global.rs  lib.rs  utils.rs
pfm-core/src/forex/: currency.rs  currency_test.rs  entity.rs  entity_test.rs  interface.rs  mock.rs  mod.rs  money.rs  money_test.rs  service.rs  service_test.rs
pfm-core/src/forex_impl/: currency_api.rs  currency_api_test.rs  currencybeacon.rs  exchange_api.rs  exchange_api_test.rs  forex_storage.rs  mod.rs  open_exchange_api.rs  open_exchange_api_test.rs  tradermade.rs  utils.rs
pfm-core/src/forex_manager_impl/: forex_manager.rs  forex_manager_storage.rs  mod.rs
pfm-core/src/forex_storage_impl/: forex_storage.rs  mod.rs
pfm-core/src/global/: config.rs  constants.rs  http_client.rs  mod.rs  storage_fs.rs
pfm-core/tests/: test_poll.rs  test_storage.rs
pfm-cron/: Cargo.toml
pfm-cron/src/: job.rs  main.rs
pfm-http/: Cargo.toml
pfm-http/src/: dto.rs  global.rs  handler.rs  main.rs  middlewares.rs  routes.rs
pfm-http/src/routes/admin_routes/: historical_rates.rs  mod.rs
pfm-http/src/routes/forex_handlers/: convert.rs  mod.rs  rates.rs  timeseries.rs
pfm-http/src/routes/forex_routes/: convert.rs  rates.rs  timeseries.rs
pfm-http/src/routes/root_handlers/: mod.rs  ping.rs
pfm-http/src/routes/root_routes/: mod.rs
pfm-tool/: Cargo.toml
pfm-tool/src/: main.rs
pfm-utils/: Cargo.toml
pfm-utils/src/: config_util.rs  graceful_util.rs  lib.rs  tracing_util.rs
