[package]
name = "pfm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

ring = { workspace = true }
quinn-proto ={ workspace = true}

uuid = { workspace = true }
lazy_static = { workspace = true }
configrs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
dirs = { workspace = true }

async-trait = { workspace = true }

# rust_decimal = { version = "1.36", features = ["serde-arbitrary-precision"] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
accounting = { workspace = true }
iso_currency = { workspace = true }
rusty-money = { workspace = true }


