[package]
name = "pfm-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
pfm-core ={ path = "../pfm-core" }
tokio = {workspace = true}
serde = {workspace = true}
anyhow = {workspace = true}
configrs = {workspace = true}
chrono = {workspace = true}
uuid = {workspace = true}
tokio-cron-scheduler = {workspace = true}
quinn-proto ={ workspace = true}
