[package]
name = "pfm-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
pfm-core ={ path = "../pfm-core" }
pfm-utils = { path = "../pfm-utils" }

tokio = {workspace = true}
serde = {workspace = true}
anyhow = {workspace = true}
configrs = {workspace = true}
chrono = {workspace = true}
uuid = {workspace = true}
tokio-cron-scheduler = {workspace = true}
quinn-proto ={ workspace = true}

# tracing
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-error = {workspace = true}
tracing-opentelemetry = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-otlp = {workspace = true}

