[package]
name = "pfm-http"
version = "0.1.0"
edition = "2021"

[dependencies]
pfm-core ={ path = "../pfm-core" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
configrs = "0.1"
anyhow = "1"
thiserror = "1"
ring = { workspace = true }

