[package]
name = "pfm-http"
version = "0.1.0"
edition = "2021"

[dependencies]
pfm-core ={ path = "../pfm-core" }
pfm-utils = { path = "../pfm-utils" }

tokio = { workspace = true }
axum = { workspace = true }
tower = {workspace = true}
chrono = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true}
lazy_static = { workspace = true }
configrs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ring = { workspace = true }
quinn-proto ={ workspace = true}
async-trait = {workspace = true}
uuid = {workspace = true}
url = {workspace = true}

# tracing
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-error = {workspace = true}
tracing-opentelemetry = {workspace = true}
opentelemetry = {workspace = true}
opentelemetry-otlp = {workspace = true}


