[package]
name = "pfm-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
pfm-core ={ path = "../pfm-core" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
anyhow = "1"
thiserror = "1"
regex = "1"
strum = "0.27"
strum_macros = "0.27"
