[package]
name = "pfm-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
pfm-core ={ path = "../pfm-core" }

tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
quinn-proto ={ workspace = true}
csv = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
sha2 = {workspace = true}

