[package]
name = "pfm-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-error = {workspace = true}
tracing-opentelemetry = {workspace = true, optional = true}
opentelemetry = {workspace = true, optional = true}
opentelemetry-otlp = {workspace = true, optional = true}

[features]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]
