[package]
name = "pfm-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
tower-http = {workspace = true}

serde = { workspace = true }
serde_json = { workspace = true }
configrs = { workspace = true }
anyhow = { workspace = true }

## tracing
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-error = {workspace = true}
tracing-opentelemetry = {workspace = true, optional = true}
opentelemetry = {workspace = true, optional = true}
opentelemetry-otlp = {workspace = true, optional = true}

[features]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]
